replace depreciated apache directives

--- a/overlay/etc/apache2/sites-available/000-default.conf
+++ b/overlay/etc/apache2/sites-available/000-default.conf
@@ -21,7 +21,6 @@ ServerName localhost
 
 <Directory /var/www/>
         Options Indexes FollowSymLinks MultiViews
-        Order allow,deny
-        allow from all
+        Require all granted
 </Directory>
 
