Fix the Apache conf file

--- a/overlay/etc/apache2/sites-available/000-default.conf
+++ b/overlay/etc/apache2/sites-available/000-default.conf
@@ -2,14 +2,14 @@ ServerName localhost
 
 <VirtualHost *:80>
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/
+        DocumentRoot /var/www
 </VirtualHost>
 
 <VirtualHost *:443>
         SSLEngine on
         SSLCertificateFile /etc/ssl/certs/cert.pem
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/
+        DocumentRoot /var/www
         BrowserMatch ".*MSIE.*" \
                 nokeepalive ssl-unclean-shutdown \
                 downgrade-1.0 force-response-1.0
@@ -17,9 +17,10 @@ ServerName localhost
 
 <Location />
         SetHandler mono
+        Require all granted
 </Location>
 
-<Directory /var/www/>
+<Directory /var/www>
         Options Indexes FollowSymLinks MultiViews
         Require all granted
 </Directory>
